@@ -16,7 +16,7 @@
  */
 package org.apache.sis.internal.filter.sqlmm;
 
-import java.util.Arrays;
+import java.util.List;
 import org.opengis.geometry.DirectPosition;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 import org.opengis.referencing.crs.GeographicCRS;
@@ -27,12 +27,10 @@ import org.apache.sis.filter.DefaultFilterFactory;
 import org.apache.sis.filter.Optimization;
 import org.apache.sis.geometry.GeneralEnvelope;
 import org.apache.sis.geometry.WraparoundMethod;
+import org.apache.sis.internal.filter.Node;
 import org.apache.sis.internal.feature.Geometries;
 import org.apache.sis.internal.feature.GeometryWrapper;
-import org.apache.sis.internal.system.Loggers;
 import org.apache.sis.math.Vector;
-
-import static java.util.logging.Logger.getLogger;
 
 // Test dependencies
 import org.apache.sis.referencing.crs.HardCodedCRS;
@@ -59,14 +57,13 @@ import org.opengis.filter.ValueReference;
  *
  * @author  Johann Sorel (Geomatys)
  * @author  Martin Desruisseaux (Geomatys)
- * @version 1.2
+ * @version 1.4
  *
  * @param  <G> root class of geometry implementation.
  *
  * @since 1.1
- * @module
  */
-public abstract strictfp class RegistryTestCase<G> extends TestCase {
+public abstract class RegistryTestCase<G> extends TestCase {
     /**
      * Name of property value used in test feature instances.
      */
@@ -113,7 +110,7 @@ public abstract strictfp class RegistryTestCase<G> extends TestCase {
      * @see #assertNoUnexpectedLog()
      */
     @Rule
-    public final LoggingWatcher loggings = new LoggingWatcher(getLogger(Loggers.FILTER));
+    public final LoggingWatcher loggings = new LoggingWatcher(Node.LOGGER);
 
     /**
      * Creates a new test case.
@@ -422,8 +419,8 @@ public abstract strictfp class RegistryTestCase<G> extends TestCase {
     public void testLineString() {
         assertRequireArguments("ST_LineString");
         final Object result = evaluate("ST_LineString",
-                Arrays.asList(library.createPoint(10, 20),
-                              library.createPoint(30, 40)), HardCodedCRS.WGS84);
+                List.of(library.createPoint(10, 20),
+                        library.createPoint(30, 40)), HardCodedCRS.WGS84);
         assertPolylineEquals(result, HardCodedCRS.WGS84, 10, 20, 30, 40);
     }
 
