@@ -21,7 +21,6 @@ import java.util.Map;
 import java.util.HashMap;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.ServiceLoader;
 import java.util.concurrent.TimeUnit;
 import java.util.function.UnaryOperator;
@@ -43,9 +42,7 @@ import org.apache.sis.internal.system.DelayedRunnable;
  * To allow such automatic configuration, modules must declare instances of this interface in the
  * following file:
  *
- * {@preformat text
- *     META-INF/services/org.org.apache.sis.internal.jaxb.TypeRegistration
- * }
+ * <pre class="text">META-INF/services/org.org.apache.sis.internal.jaxb.TypeRegistration</pre>
  *
  * @author  Martin Desruisseaux (Geomatys)
  * @version 1.0
@@ -53,7 +50,6 @@ import org.apache.sis.internal.system.DelayedRunnable;
  * @see org.apache.sis.xml.MarshallerPool
  *
  * @since 0.3
- * @module
  */
 public abstract class TypeRegistration {
     /**
@@ -196,8 +192,8 @@ public abstract class TypeRegistration {
             final UnaryOperator<Object> c = t.beforeMarshal();
             if (c != null) toImpl.add(c);
         }
-        converters = toImpl.toArray(new UnaryOperator[toImpl.size()]);
-        return types.toArray(new Class<?>[types.size()]);
+        converters = toImpl.toArray(UnaryOperator[]::new);
+        return types.toArray(Class<?>[]::new);
     }
 
     /**
@@ -249,7 +245,7 @@ public abstract class TypeRegistration {
             }
         }
         if (properties == null) {
-            return Collections.singletonMap(ROOT_ADAPTERS, c);
+            return Map.of(ROOT_ADAPTERS, c);
         }
         final Map<String,Object> copy = new HashMap<>(properties);
         copy.put(ROOT_ADAPTERS, c);
