@@ -16,7 +16,8 @@
  */
 package org.apache.sis.metadata;
 
-import java.util.Arrays;
+import java.util.Set;
+import java.util.List;
 import org.opengis.metadata.citation.Role;
 import org.opengis.metadata.citation.PresentationForm;
 import org.apache.sis.util.collection.TableColumn;
@@ -35,8 +36,6 @@ import org.apache.sis.test.DependsOn;
 import org.apache.sis.test.TestCase;
 import org.junit.Test;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singleton;
 import static org.apache.sis.test.Assert.*;
 
 
@@ -46,10 +45,9 @@ import static org.apache.sis.test.Assert.*;
  * @author  Martin Desruisseaux (Geomatys)
  * @version 1.0
  * @since   0.3
- * @module
  */
 @DependsOn(TreeTableViewTest.class)
-public final strictfp class TreeTableFormatTest extends TestCase {
+public final class TreeTableFormatTest extends TestCase {
     /**
      * The formatter to use.
      */
@@ -112,11 +110,11 @@ public final strictfp class TreeTableFormatTest extends TestCase {
         final DefaultCitation   titled = new DefaultCitation("Some specification");
         final DefaultCitation    coded = new DefaultCitation();
         final DefaultCitation untitled = new DefaultCitation();
-        titled  .setPresentationForms(singleton(PresentationForm.DOCUMENT_HARDCOPY));
-        coded   .setPresentationForms(singleton(PresentationForm.IMAGE_HARDCOPY));
-        untitled.setCitedResponsibleParties(singleton(new DefaultResponsibility(Role.AUTHOR, null, null)));
+        titled  .setPresentationForms(Set.of(PresentationForm.DOCUMENT_HARDCOPY));
+        coded   .setPresentationForms(Set.of(PresentationForm.IMAGE_HARDCOPY));
+        untitled.setCitedResponsibleParties(Set.of(new DefaultResponsibility(Role.AUTHOR, null, null)));
         final DefaultProcessing processing = new DefaultProcessing();
-        processing.setDocumentations(asList(titled, coded, untitled));
+        processing.setDocumentations(List.of(titled, coded, untitled));
         final String text = format.format(processing.asTreeTable());
         assertMultilinesEquals(
             "Processing\n" +
@@ -135,7 +133,7 @@ public final strictfp class TreeTableFormatTest extends TestCase {
     @Test
     public void testImageDescription() {
         final DefaultImageDescription image = new DefaultImageDescription();
-        image.setAttributeGroups(Arrays.asList(
+        image.setAttributeGroups(List.of(
             new DefaultAttributeGroup(null, createBand(0.25, 0.26)),
             new DefaultAttributeGroup(null, createBand(0.28, 0.29))
         ));
@@ -160,12 +158,12 @@ public final strictfp class TreeTableFormatTest extends TestCase {
     @Test
     public void testTreeWithCustomElements() {
         final DefaultCitation citation = new DefaultCitation();
-        citation.setAlternateTitles(Arrays.asList(
+        citation.setAlternateTitles(List.of(
                 new SimpleInternationalString("Apple"),
                 new SimpleInternationalString("Orange"),
                 new SimpleInternationalString("Kiwi")));
 
-        citation.setPresentationForms(Arrays.asList(
+        citation.setPresentationForms(List.of(
                 PresentationForm.IMAGE_DIGITAL,
                 PresentationForm.valueOf("AUDIO_DIGITAL"),  // Existing form
                 PresentationForm.valueOf("test")));         // Custom form
