@@ -19,7 +19,6 @@ package org.apache.sis.internal.referencing;
 import java.util.Set;
 import java.util.Map;
 import java.util.HashMap;
-import java.util.Collections;
 import java.util.function.Supplier;
 import javax.measure.UnitConverter;
 import javax.measure.IncommensurableException;
@@ -41,8 +40,8 @@ import org.apache.sis.internal.metadata.NameToIdentifier;
 import org.apache.sis.internal.system.DefaultFactories;
 import org.apache.sis.internal.system.Modules;
 import org.apache.sis.internal.system.SystemListener;
+import org.apache.sis.internal.util.CollectionsExt;
 import org.apache.sis.internal.util.Numerics;
-import org.apache.sis.internal.jdk9.JDK9;
 import org.apache.sis.util.Deprecable;
 import org.apache.sis.util.collection.Containers;
 
@@ -52,9 +51,8 @@ import org.apache.sis.util.collection.Containers;
  * until first needed. Contains also utility methods related to coordinate operations.
  *
  * @author  Martin Desruisseaux (Geomatys)
- * @version 1.1
+ * @version 1.4
  * @since   0.7
- * @module
  */
 public final class CoordinateOperations extends SystemListener {
     /**
@@ -95,11 +93,10 @@ public final class CoordinateOperations extends SystemListener {
      * are longitude at dimension 0 or 1, and some measurement of time (in climatology) at dimension 2 or 3,
      * then the most likely values are (binary digits):
      *
-     * {@preformat text
+     * <pre class="text">
      *     0000    0100    1000
      *     0001    0101    1001
-     *     0010    0110    1010
-     * }
+     *     0010    0110    1010</pre>
      *
      * The last decimal value is 10 (binary {@code 1010}); we don't need to cache more.
      */
@@ -179,7 +176,7 @@ public final class CoordinateOperations extends SystemListener {
             {
                 return CoordinateOperations.factory();
             }
-            properties = Collections.emptyMap();
+            properties = Map.of();
         }
         final HashMap<String,Object> p = new HashMap<>(properties);
         p.putIfAbsent(ReferencingFactoryContainer.CRS_FACTORY, crsFactory);
@@ -252,7 +249,7 @@ public final class CoordinateOperations extends SystemListener {
                 return wrapAroundChanges(source, target.getCoordinateSystem());
             }
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -293,7 +290,7 @@ public final class CoordinateOperations extends SystemListener {
             indices[i] = dim;
             r &= ~(1L << dim);
         }
-        final Set<Integer> dimensions = JDK9.setOf(indices);
+        final Set<Integer> dimensions = CollectionsExt.immutableSet(true, indices);
         if (useCache) {
             synchronized (CACHE) {
                 final Set<Integer> existing = CACHE[(int) changes];
