@@ -18,7 +18,6 @@ package org.apache.sis.referencing.factory.sql;
 
 import java.util.Set;
 import java.util.Locale;
-import java.util.Collections;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.sql.Connection;
@@ -39,7 +38,6 @@ import org.apache.sis.setup.InstallationResources;
 import org.apache.sis.internal.referencing.Resources;
 import org.apache.sis.internal.system.Fallback;
 import org.apache.sis.internal.system.DataDirectory;
-import org.apache.sis.internal.system.Loggers;
 import org.apache.sis.internal.util.CollectionsExt;
 import org.apache.sis.internal.util.Constants;
 
@@ -49,9 +47,7 @@ import org.apache.sis.internal.util.Constants;
  * to bundle the EPSG or other datasets in their own product for automatic installation when first needed.
  * Implementations of this class can be declared in the following file for automatic discovery by {@link EPSGFactory}:
  *
- * {@preformat text
- *     META-INF/services/org.apache.sis.setup.InstallationResources
- * }
+ * <pre class="text">META-INF/services/org.apache.sis.setup.InstallationResources</pre>
  *
  * <h2>How this class is used</h2>
  * The first time that an {@link EPSGDataAccess} needs to be instantiated,
@@ -67,9 +63,8 @@ import org.apache.sis.internal.util.Constants;
  * </ol>
  *
  * @author  Martin Desruisseaux (Geomatys)
- * @version 0.7
+ * @version 1.4
  * @since   0.7
- * @module
  */
 public abstract class InstallationScriptProvider extends InstallationResources {
     /**
@@ -235,28 +230,26 @@ public abstract class InstallationScriptProvider extends InstallationResources {
      * This method is invoked by the default implementation of {@link #openScript(String, int)}
      * for all scripts except {@link #PREPARE} and {@link #FINISH}.
      *
-     * <div class="note"><b>Example 1:</b>
+     * <h4>Example 1</h4>
      * if this {@code InstallationScriptProvider} instance gets the SQL scripts from files in a well-known directory
      * and if the names given at {@linkplain #InstallationScriptProvider(String, String...) construction time} are the
      * filenames in that directory, then this method can be implemented as below:
      *
-     * {@preformat java
-     *    protected InputStream openStream(String name) throws IOException {
-     *        return Files.newInputStream(directory.resolve(name));
-     *    }
+     * {@snippet lang="java" :
+     *      protected InputStream openStream(String name) throws IOException {
+     *          return Files.newInputStream(directory.resolve(name));
+     *      }
      * }
-     * </div>
      *
-     * <div class="note"><b>Example 2:</b>
+     * <h4>Example 2</h4>
      * if this {@code InstallationScriptProvider} instance rather gets the SQL scripts from resources bundled
      * in the same JAR files than and in the same package, then this method can be implemented as below:
      *
-     * {@preformat java
-     *    protected InputStream openStream(String name) {
-     *        return MyClass.getResourceAsStream(name);
-     *    }
+     * {@snippet lang="java" :
+     *      protected InputStream openStream(String name) {
+     *          return MyClass.getResourceAsStream(name);
+     *      }
      * }
-     * </div>
      *
      * @param  name  name of the script file to open. Can be {@code null} if the resource is not found.
      * @return an input stream opened of the given script file.
@@ -269,8 +262,7 @@ public abstract class InstallationScriptProvider extends InstallationResources {
      * {@code EPSGFactory.install(…)} because it is the public API using this class.
      */
     static void log(final LogRecord record) {
-        record.setLoggerName(Loggers.CRS_FACTORY);
-        Logging.log(EPSGFactory.class, "install", record);
+        Logging.completeAndLog(EPSGDataAccess.LOGGER, EPSGFactory.class, "install", record);
     }
 
 
@@ -290,7 +282,6 @@ public abstract class InstallationScriptProvider extends InstallationResources {
      * @author  Martin Desruisseaux (Geomatys)
      * @version 0.7
      * @since   0.7
-     * @module
      */
     @Fallback
     static final class Default extends InstallationScriptProvider {
@@ -362,7 +353,7 @@ public abstract class InstallationScriptProvider extends InstallationResources {
          */
         @Override
         public Set<String> getAuthorities() {
-            return (directory != null) ? super.getAuthorities() : Collections.emptySet();
+            return (directory != null) ? super.getAuthorities() : Set.of();
         }
 
         /**
