@@ -16,8 +16,6 @@
  */
 package org.apache.sis.test.integration;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.text.ParseException;
 import javax.measure.Quantity;
@@ -62,25 +60,23 @@ import static org.junit.Assume.assumeTrue;
  * @author  Martin Desruisseaux (Geomatys)
  * @version 1.0
  * @since   0.7
- * @module
  */
 @DependsOn({
     org.apache.sis.referencing.CRSTest.class,
     org.apache.sis.io.wkt.WKTFormatTest.class
 })
-public final strictfp class ConsistencyTest extends TestCase {
+public final class ConsistencyTest extends TestCase {
     /**
      * Codes to exclude for now.
      */
-    private static final Set<String> EXCLUDES = new HashSet<>(Arrays.asList(
+    private static final Set<String> EXCLUDES = Set.of(
         "CRS:1",            // Computer display: WKT parser alters the (i,j) axis names.
         "EPSG:5819",        // EPSG topocentric example A: DerivedCRS wrongly handled as a ProjectedCRS. See SIS-518.
         "AUTO2:42001",      // This projection requires parameters, but we provide none.
         "AUTO2:42002",      // This projection requires parameters, but we provide none.
         "AUTO2:42003",      // This projection requires parameters, but we provide none.
         "AUTO2:42004",      // This projection requires parameters, but we provide none.
-        "AUTO2:42005"       // This projection requires parameters, but we provide none.
-    ));
+        "AUTO2:42005");     // This projection requires parameters, but we provide none.
 
     /**
      * Width of the code columns in the warnings formatted by {@link #print(String, String, Object)}.
