@@ -17,7 +17,6 @@
 package org.apache.sis.storage;
 
 import java.util.List;
-import java.util.Collections;
 import org.apache.sis.coverage.SampleDimension;
 import org.apache.sis.coverage.grid.GridGeometry;
 import org.apache.sis.coverage.grid.GridCoverage;
@@ -43,7 +42,6 @@ import org.apache.sis.util.ArraysExt;
  * @author  Johann Sorel (Geomatys)
  * @version 1.2
  * @since   1.0
- * @module
  */
 public interface GridCoverageResource extends DataSet {
     /**
@@ -136,10 +134,10 @@ public interface GridCoverageResource extends DataSet {
         if (gg != null && gg.isDefined(GridGeometry.RESOLUTION)) {      // Should never be null but we are paranoiac.
             final double[] resolution = gg.getResolution(false);
             if (!ArraysExt.allEquals(resolution, Double.NaN)) {
-                return Collections.singletonList(resolution);
+                return List.of(resolution);
             }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
