@@ -17,7 +17,7 @@
 package org.apache.sis.internal.storage.gpx;
 
 import java.net.URI;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -62,7 +62,6 @@ import org.opengis.metadata.citation.Responsibility;
  * @author  Martin Desruisseaux (Geomatys)
  * @version 1.3
  * @since   0.8
- * @module
  */
 public final class Copyright implements LegalConstraints, Responsibility, Party, Citation, CitationDate {
     /**
@@ -159,7 +158,7 @@ resp:   for (final Responsibility r : c.getResponsibleParties()) {
     @Override
     public Collection<Restriction> getUseConstraints() {
         if (license != null) {
-            return Arrays.asList(Restriction.COPYRIGHT, Restriction.LICENCE);
+            return List.of(Restriction.COPYRIGHT, Restriction.LICENCE);
         } else {
             return Collections.singleton(Restriction.COPYRIGHT);
         }
